sort.baseball.BubbleBaseball.scala.error
Compilation error:
BubbleBaseball:2: error: not found: value getNombreBase
  var n:Int = getNombreBase()
              ^